# katzu

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
engine/: CMakeLists.txt
engine/include/: core.hpp  engine.hpp
engine/src/: engine.cpp
testbed/: CMakeLists.txt
testbed/src/: main.cpp
